@@ -133,7 +133,7 @@ function ob_sessrewrite($buffer)
 
 		//	Find all URLs in the buffer
 		$context['pretty']['search_patterns'][] = '~(<a[^>]+href=|<link[^>]+href=|<form[^>]+?action=)(\"[^\"#]+|\'[^\'#]+)~';
-		$crc_query = array();
+		$urls_query = array();
 		$uncached_urls = array();
 		foreach ($context['pretty']['search_patterns'] as $pattern)
 		{
@@ -142,29 +142,29 @@ function ob_sessrewrite($buffer)
 			{
 				//	Rip out everything that shouldn't be cached
 				$match = preg_replace(array('~^[\"\']|PHPSESSID=[^;]+|sesc=[^;]+~', '~\"~', '~;+|=;~', '~\?;~', '~\?$|;$|=$~'), array('', '%22', ';', '?', ''), $match);
-				$crc = crc32($match);
-				$crc_query[] = $crc; 
-				$uncached_urls[$crc] = array(
+				$url_id = str_replace(array($scripturl . '?board=', $scripturl . '?topic=', $scripturl . '?action=', $scripturl), array('`B', '`T', '`A', '`S'), $match);
+				$urls_query[] = '\'' . $url_id . '\'';
+				$uncached_urls[$url_id] = array(
 					'url' => $match,
-					'crc' => $crc
+					'url_id' => $url_id
 				);
 			}
 		}
 
 		//	Procede only if there are actually URLs in the page
-		if (count($crc_query) != 0)
+		if (count($urls_query) != 0)
 		{
+			$urls_query = array_keys(array_flip($urls_query));
 			//	Retrieve cached URLs
 			$context['pretty']['cached_urls'] = array();
 			$smfFunc['db_query']('', "
-				SELECT url_crc, replacement
+				SELECT url_id, replacement
 				FROM {$db_prefix}pretty_urls_cache
-				WHERE url_crc IN (" . implode(', ', $crc_query) . ")
-					AND log_time > " . (time() - 86400), __FILE__, __LINE__);
+				WHERE url_id IN (" . implode(', ', $urls_query) . ')', __FILE__, __LINE__);
 			while ($row = $smfFunc['db_fetch_assoc']($query))
 			{
-				$context['pretty']['cached_urls'][$row['url_crc']] = $row['replacement'];
-				unset($uncached_urls[$row['url_crc']]);
+				$context['pretty']['cached_urls'][$row['url_id']] = $row['replacement'];
+				unset($uncached_urls[$row['url_id']]);
 			}
 			$smfFunc['db_free_result']($query);
 
@@ -179,21 +179,22 @@ function ob_sessrewrite($buffer)
 
 				//	Fill the cached URLs array
 				$cache_data = array();
-				foreach ($uncached_urls as $crc => $url)
+				foreach ($uncached_urls as $url_id => $url)
 				{
 					if (!isset($url['replacement']))
 						$url['replacement'] = $url['url'];
 					$url['replacement'] = str_replace(chr(18), '\'', $url['replacement']);
 					$url['replacement'] = preg_replace(array('~\"~', '~;+|=;~', '~\?;~', '~\?$|;$|=$~'), array('%22', ';', '?', ''), $url['replacement']);
-					$context['pretty']['cached_urls'][$crc] = $url['replacement'];
-					$cache_data[] = '(' . $crc . ', \'' . addslashes($url['replacement']) . '\')';
+					$context['pretty']['cached_urls'][$url_id] = $url['replacement'];
+					if (strlen($url_id) < 256)
+						$cache_data[] = '(\'' . $url_id . '\', \'' . addslashes($url['replacement']) . '\')';
 				}
 
 				//	Cache these URLs in the database
 				if (count($cache_data) != 0)
 					$smfFunc['db_query']('', "
 						REPLACE INTO {$db_prefix}pretty_urls_cache
-							(url_crc, replacement)
+							(url_id, replacement)
 						VALUES " . implode(', ', $cache_data), __FILE__, __LINE__);
 			}
 
@@ -236,7 +237,7 @@ function pretty_scripts_remove($match)
 //	A callback function to replace the buffer's URLs with their cached URLs
 function pretty_buffer_callback($matches)
 {
-	global $context;
+	global $context, $scripturl;
 
 	//	Is this URL part of a feed?
 	$isFeed = strpos($matches[1], '>');
@@ -251,10 +252,10 @@ function pretty_buffer_callback($matches)
 
 	//	Rip out everything that won't have been cached
 	$cacheableurl = preg_replace(array('~PHPSESSID=[^;#]+|sesc=[^;#]+|#.*$~', '~\"~', '~;+|=;~', '~\?;~', '~\?$|;$|=$~'), array('', '%22', ';', '?', ''), $matches[2]);
-	$crc = crc32($cacheableurl);
+	$url_id = str_replace(array($scripturl . '?board=', $scripturl . '?topic=', $scripturl . '?action=', $scripturl), array('`B', '`T', '`A', '`S'), $cacheableurl);
 
 	//	Stich everything back together, clean it up and return
-	$replacement = isset($context['pretty']['cached_urls'][$crc]) ? $context['pretty']['cached_urls'][$crc] : $cacheableurl;
+	$replacement = isset($context['pretty']['cached_urls'][$url_id]) ? $context['pretty']['cached_urls'][$url_id] : $cacheableurl;
 	$replacement .= (strpos($replacement, '?') === false ? '?' : ';') . (isset($PHPSESSID[0]) ? $PHPSESSID[0] : '') . ';' . (isset($sesc[0]) ? $sesc[0] : '') . (isset($fragment[0]) ? $fragment[0] : '');
 	$replacement = preg_replace(array('~;+|=;~', '~\?;~', '~\?#|;#|=#~', '~\?$|;$|#$|=$~'), array(';', '?', '#', ''), $replacement);
 	return $matches[1] . ($isFeed === false ? '"' : '') . $replacement . ($isFeed === false ? '"' : '');
@@ -303,7 +304,7 @@ function redirectexit($setLocation = '', $refresh = false, $permanent = false)
 	if ($modSettings['pretty_enable_filters'])
 	{
 		require_once($sourcedir . '/PrettyUrls-Filters.php');
-		$url = array(0 => array('url' => $setLocation, 'crc' => 0));
+		$url = array(0 => array('url' => $setLocation, 'url_id' => 'setLocation'));
 		$filter_callbacks = unserialize($modSettings['pretty_filter_callbacks']);
 		foreach ($filter_callbacks as $callback)
 		{
